--- a/app/styles/_min-992.scss
+++ b/app/styles/_min-992.scss
@@ -63,6 +63,26 @@ $blue-color: #3c4f90;
   }
 
   //END PRODUCT-PAGE 
+
+  //ABOUT-PAGE 
+
+  .about-page {
+
+    .press-list {
+
+      .img-wrap {
+        height: 200px;        
+      }
+
+    }
+    
+    .press-item {
+      width: 260px;
+    }    
+
+  }
+
+  //END ABOUT-PAGE 
   
   
 }
