--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,7 +20,7 @@ $icon-font-path: '../fonts/';
 @import "_product-page";
 @import "_news-page";
 @import "_instashop-page";
-
+@import "_about-page";
 
 @import "_other.scss";  
 
