--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -21,6 +21,8 @@ $icon-font-path: '../fonts/';
 @import "_news-page";
 @import "_instashop-page";
 @import "_about-page";
+@import "_contacts-page";
+
 
 @import "_other.scss";  
 
