--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,6 +22,7 @@ $icon-font-path: '../fonts/';
 @import "_instashop-page";
 @import "_about-page";
 @import "_contacts-page";
+@import "_order-page";
 
 
 @import "_other.scss";  
