cart & header fix

--- a/app/styles/_cart-popup.scss
+++ b/app/styles/_cart-popup.scss
@@ -44,6 +44,11 @@ $blue-color: #3c4f90;
 		font-size: 14px;
 	}
 
+	.cart-body {
+		//height: 240px; /* 3 товара*/
+		height: 209px;		
+	}
+
 	.cart-list {
 		margin-top: 13px;
 	}
