--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -149,6 +149,11 @@ $blue-color: #3c4f90;
 
   	}
 
+  	.feedback-text-wrap {
+  		max-width: 100%;
+  		margin: 20px auto;
+  	}
+
   	.feedback-text {
   		background: transparent;
   		border-bottom: 13px solid transparent;
