--- a/app/styles/_min-1025.scss
+++ b/app/styles/_min-1025.scss
@@ -59,6 +59,18 @@ $blue-color: #3c4f90;
 
   }  
 
-  //END CATALOG-PAGE  
+  //END CATALOG-PAGE 
+
+  //ONE-NEWS-PAGE
+
+  .one-news-page {
+
+    .img-wrap {
+      margin-left: 95px;  
+    }
+
+  }
+
+  //END ONE-NEWS-PAGE 
   
 }
