--- a/app/styles/_min-992.scss
+++ b/app/styles/_min-992.scss
@@ -49,7 +49,8 @@ $blue-color: #3c4f90;
 
   .product-page {
 
-  	.slider-product-content {
+  	.slider-product-content,
+  	.slider-product-content-1 {
 			width: 810px; 
 		}
 
