--- a/app/styles/_other.scss
+++ b/app/styles/_other.scss
@@ -67,7 +67,7 @@ $icon-font-path: '../fonts/';
 		overflow: auto;
 		height: 150px;
 		overflow: hidden;
-		overflow-y: scroll;	
+		//overflow-y: scroll;	
 
   }
   
