--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -12,6 +12,7 @@ $icon-font-path: '../fonts/';
 @import "_slick";
 @import "_slick-theme";
 @import "_nice-select";
+@import "_scroll-bar";
 @import "_header";
 @import "_footer";
 @import "_cart-popup";
@@ -23,6 +24,7 @@ $icon-font-path: '../fonts/';
 @import "_about-page";
 @import "_contacts-page";
 @import "_order-page";
+@import "_one-news-page";
 
 
 @import "_other.scss";  
