--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -31,6 +31,18 @@ body {
 
 }
 
+
+.img-wrap {
+
+	img {
+	 width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+    object-fit: cover;
+	}
+
+}
+
 .title {
 	font-size: 24px;
 	font-weight: 600;
@@ -67,6 +79,41 @@ body {
 		height: 2px;
 		background: #727272;
 	}
+
+}
+
+.breadcrumb-list {
+	margin-bottom: 30px;
+	position: relative;
+	z-index: 10;
+
+	 li {
+	 		float: left;
+
+		 	a {
+				font-size: 16px;
+				font-weight: 600;
+				color: #9c9c9c;
+		 	}
+
+		 	&:after {
+		 		content: ">";
+		 		font-size: 16px;
+				font-weight: 600;
+				color: #9c9c9c;
+				margin: 0 10px;
+				display: inline-block;
+		 	}
+
+		 	&:last-child {
+
+		 		&:after {
+		 			content: "";
+		 		}
+
+		 	}
+
+	 }
 
 }
 
@@ -138,6 +185,8 @@ body {
 		img {
 			width: 100%;
 			height: 100%;
+			 -o-object-fit: cover;
+    	object-fit: cover;
 		}
 
 	}
@@ -257,7 +306,8 @@ body {
 		font-size: 16px;
 		font-weight: 700;
 		text-align: center;
-		padding: 11px 0;
+		line-height: 42px;
+		vertical-align: middle;
 		border-radius: 5px;
 
 			&:hover,
@@ -267,6 +317,10 @@ body {
 				color: #fff;
 				background: rgba(132,116,214,0.8);
 				transition: background .5s ease;
+			}
+
+			i {
+				vertical-align: middle;
 			}
 	}
 
@@ -281,11 +335,10 @@ body {
 			width: 100%;
 			overflow: hidden;
 			border-radius: 5px;
-			max-height: 200px;
 			height: 200px;
+			max-height: 200px;
 
-			img {
-				width: 100%;
+			img {				
 				border-radius: 5px;
 			}
 
