--- a/app/styles/_main-page.scss
+++ b/app/styles/_main-page.scss
@@ -21,7 +21,7 @@ $blue-color: #3c4f90;
 	}	
 
 	.content-list {		
-		justify-content: space-between;		
+		justify-content: center;		
 		margin-top: 40px;
 	}
 
@@ -97,8 +97,10 @@ $blue-color: #3c4f90;
 		overflow: hidden;
 
 		img {
-			width: 100%;
-			height: 100%;
+			 width: 100%;
+		    height: 100%;
+		    -o-object-fit: cover;
+		    object-fit: cover;
 		}
 
 	}
@@ -243,19 +245,23 @@ $blue-color: #3c4f90;
 		margin: 12px auto 12px 30px;
 	}
 
-	.feedback-text {
-		color: $page-color;
-		font-size: 14px;
-		font-weight: 400;
-		line-height: 1.5em;
+	.feedback-text-wrap {
 		padding: 0 18px;
 		border-bottom: 13px solid #fff;
 		border-top: 13px solid #fff;
 		background: #fff;
 		max-width: 330px;
-		max-height: 200px; 		
-		border-radius: 5px;
-		overflow: hidden;
+		height: 200px;
+		//overflow-y: scroll;  		
+		border-radius: 5px;		
+	}
+
+	.feedback-text {
+		color: $page-color;
+		font-size: 14px;
+		font-weight: 400;
+		line-height: 1.5em;
+		
 	}
 
 	//end section-4
