--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -92,6 +92,8 @@ $blue-color: #3c4f90;
 			overflow-y: scroll;
 			 -webkit-overflow-scrolling: touch;
 			z-index: 1000;
+
+
 		}
 
 		/* end */
@@ -101,14 +103,16 @@ $blue-color: #3c4f90;
 			display: block;
 
 			ul {
-				height: auto;
+				height: 320px;
 				display: none;
 
 				li {
 					box-sizing: border-box;
 					width: 100%;
-					text-align: left;					
-					padding: 10px 0 10px 0;
+					text-align: left;
+					height: auto;					
+					//padding: 10px 0 10px 0;
+					padding: 3px 0 3px 0;
 
 					&:first-child {
 						padding-top: 25px;
@@ -144,6 +148,8 @@ $blue-color: #3c4f90;
 	-moz-box-shadow: none;
 	box-shadow: none;
 
+	
+
   	&:after {
   		content: "";
   		display: none;
@@ -155,6 +161,10 @@ $blue-color: #3c4f90;
 			&:last-child {
 				border-bottom: none;
 			}
+
+  	}
+
+  	.cart-body {
 
   	}
 
@@ -180,6 +190,10 @@ $blue-color: #3c4f90;
 			display: block;
 			margin: 10px auto 0;
 			padding: 11px 0;
+  	}
+
+  	.scrollbar {
+  		float: none;
   	}
 
   } 
@@ -656,22 +670,25 @@ $blue-color: #3c4f90;
 		}
 
 		.product-slider-nav {
+			width: 100%;
 
-		.img-wrap {
-			width: 60px !important;
+		.img-wrap {			
 			height: 60px;
 			}
 
 		}
 
-		.slider-product-content {
+		.slider-product-content,
+		.slider-product-content-1 {
 			width: 100%; 
 		}
 
 		.next-button,
-    .prev-button {
-      display: none;
-    }
+    	.prev-button,
+    	.next-button-bot,
+    	.prev-button-bot {
+      	display: none;
+    	}
 
 	}	
 
