--- a/app/styles/_min-768.scss
+++ b/app/styles/_min-768.scss
@@ -181,7 +181,8 @@ $blue-color: #3c4f90;
 
   .product-page {
 
-    .slider-product-content {
+    .slider-product-content,
+    .slider-product-content-1 {
       width: 100%; 
     }
 
@@ -215,5 +216,17 @@ $blue-color: #3c4f90;
   }
 
   //END ABOUT-PAGE 
+
+  //ONE-NEWS-PAGE
+
+  .one-news-page {
+
+    .img-wrap {
+      margin-left: 40px;  
+    }
+
+  }
+
+  //END ONE-NEWS-PAGE 
   
 }
