--- a/app/styles/_product-page.scss
+++ b/app/styles/_product-page.scss
@@ -12,44 +12,14 @@ $blue-color: #3c4f90;
 		margin: 30px 0;
 	}
 
-	.breadcrumb-list {
-		margin-bottom: 30px;
-		position: relative;
-		z-index: 10;
-
-		 li {
-		 		float: left;
-
-			 	a {
-					font-size: 16px;
-					font-weight: 600;
-					color: #9c9c9c;
-			 	}
-
-			 	&:after {
-			 		content: ">";
-			 		font-size: 16px;
-					font-weight: 600;
-					color: #9c9c9c;
-					margin: 0 10px;
-					display: inline-block;
-			 	}
-
-			 	&:last-child {
-
-			 		&:after {
-			 			content: "";
-			 		}
-
-			 	}
-
-		 }
-
-	}
 
 	.left-column {
 		width: 360px;
 		float: left;
+	}
+
+	.slider-wrap {
+
 	}
 
 	.right-column {
@@ -80,13 +50,14 @@ $blue-color: #3c4f90;
 	}
 
 	.product-slider-nav {	
+		width: 285px;
 
 		.slick-list {
 			padding: 0 !important;
 		}		
 
 		.img-wrap {
-			width: 80px !important;
+			//width: 80px !important;
 			height: 80px;
 			overflow: hidden;
 			border-radius: 5px;			
@@ -355,6 +326,7 @@ $blue-color: #3c4f90;
 	    display: block;	   
 	    padding: 15px 10px;
    	}
+
   }  
 
 	.responsive-tabs-placeholder {
@@ -367,6 +339,10 @@ $blue-color: #3c4f90;
 			color: $black-color;		
 		}
 
+  }
+
+  .scrollbar {
+  	//padding: 15px 20px;
   } 
 
 	//tabs end	
