one news responsive dev

--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -525,5 +525,21 @@ $blue-color: #3c4f90;
 
   //END CONTACTS-PAGE
 
+  //ONE-NEWS-PAGE
+
+  .one-news-page {  	
+
+    .img-wrap {
+    	width: 100%;
+    	height: 240px;
+      margin-left: 0;
+      float: none;  
+    }
+
+  }
+
+  //END ONE-NEWS-PAGE 
+
+
  }
 
