--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -828,5 +828,24 @@ $blue-color: #3c4f90;
 
   //END-ORDER-PAGE
 
+  //ONE-NEWS-PAGE
+
+  .one-news-page {
+
+  	.content {
+  		padding-left: 15px;
+  		padding-right: 15px;
+  	}
+
+    .img-wrap {
+    	width: 300px;
+    	height: 240px;
+      margin-left: 30px;  
+    }
+
+  }
+
+  //END ONE-NEWS-PAGE 
+
 
 }
