--- a/app/styles/_order-page.scss
+++ b/app/styles/_order-page.scss
@@ -7,7 +7,10 @@ $black-color: #111111;
 $blue-color: #3c4f90;
 
 .order-page {	
-	padding: 2.6rem 0;
+
+	.content {
+		padding: 2.6rem 0;
+	}
 
 	.right-column {
 		float: right;
@@ -29,11 +32,15 @@ $blue-color: #3c4f90;
 
 	.input-wrap {
 		margin-top: 20px;
+
+		span {
+			display: inline-block;
+		}
 		
 	}
 
 	label {
-		display: block;
+		display: inline-block;
 		font-size: 16px;
 		font-weight: 400;
 		margin-bottom: 10px;
