--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -8,6 +8,7 @@ $blue-color: #3c4f90;
 
 html {
 	height: 100%;
+	overflow-x: hidden; 
 }
 
 body {
@@ -15,7 +16,7 @@ body {
 	font-weight: 400;
 	background: #fff;
 	//padding-right: 0 !important;
-	overflow-x: hidden; 
+	//overflow-x: hidden; 	
 	min-width: 320px;
 	height: 100%;	
 }
