--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -9,7 +9,12 @@ $blue-color: #3c4f90;
 
 .header {
 	color: #8a8a8a;
-	position: relative;
+	background: #fff;
+	width: 100%;
+	position: fixed;
+	top: 0;
+	//left: 0;
+	z-index: 100;	
 
 	.container {
 		position: relative;
@@ -112,7 +117,7 @@ $blue-color: #3c4f90;
 				content: "";
 				display: inline-block;
 				width: 100%;
-				height: 100%;
+				//height: 100%;
 			}
 
 			li {
