product-page tab fix

--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -364,7 +364,15 @@ $blue-color: #3c4f90;
 
 	.filter-title {
 			text-align: left;
-		}	
+		}
+
+		.responsive-tabs {		
+
+			.scrollbar {
+				margin-right: 10px;
+				margin-bottom: 10px;
+			}
+		}
 
 	}
 
