--- a/app/styles/_other.scss
+++ b/app/styles/_other.scss
@@ -58,7 +58,7 @@ $icon-font-path: '../fonts/';
 	.responsive-tabs-placeholder {
 	  clear: both;
 	  display: block;
-	  padding: 15px 20px;
+	  padding: 15px 15px 15px 0;
 	  border: 1px solid $border-color;
 	  border-top: none;
 	  
