--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -88,6 +88,51 @@ $blue-color: #3c4f90;
 	 	}
 
 	}
+
+	.icon-viber-footer {
+		background-image: url(../images/icon-viber-footer.svg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 100% 100%;
+		width: 20px;
+		height: 20px;
+	}
+
+	.icon-tel-footer {
+		background-image: url(../images/icon-tel-footer.svg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 100% 100%;
+		width: 20px;
+		height: 20px;
+	}
+
+	.icon-insta-footer {
+		background-image: url(../images/icon-insta-footer.svg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 100% 100%;
+		width: 20px;
+		height: 20px;
+	}
+
+	.icon-vk-footer {
+		background-image: url(../images/icon-vk-footer.svg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 100% 100%;
+		width: 20px;
+		height: 20px;
+	}
+
+	.icon-fb-footer {
+		background-image: url(../images/icon-fb-footer.svg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 100% 100%;
+		width: 20px;
+		height: 20px;
+	}
 	
 }
 
