--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -50,12 +50,52 @@ $blue-color: #3c4f90;
 	.net-block {
 		float: left;		
 		padding: 8px 0;
+
 		li {
 			display: inline-block;
 			margin: 0 5px;
 			vertical-align: middle;
 		}
 
+	}
+
+	.icon-insta-head {
+		background-image: url(../images/icon-insta-head.svg);
+		background-repeat: no-repeat;
+		background-position: 100% 100%;
+		background-size: cover;		
+		width: 20px;
+		height: 20px;
+
+		&:hover {
+			background-image: url(../images/icon-insta-head-hover.svg);
+		}
+	}
+
+	.icon-vk-head {
+		background-image: url(../images/icon-vk-head.svg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 100% 100%;
+		width: 20px;
+		height: 20px;
+
+		&:hover {
+			background-image: url(../images/icon-vk-head-hover.svg);
+		}
+	}
+
+	.icon-fb-head {
+		background-image: url(../images/icon-fb-head.svg);
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 100% 100%;
+		width: 20px;
+		height: 20px;
+
+		&:hover {
+			background-image: url(../images/icon-fb-head-hover.svg);
+		}
 	}
 
 	.header-center-column {
@@ -65,6 +105,15 @@ $blue-color: #3c4f90;
 	.logo {
 		display: inline-block;
 		padding: 2px 0;
+		width: 48px;
+		height: 30px;
+
+		img {
+		 width: 100%;
+	    height: 100%;
+	    -o-object-fit: cover;
+	    object-fit: cover;
+		}
 	}
 
 	.header-right-column {
