--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -25,6 +25,7 @@ $icon-font-path: '../fonts/';
 @import "_contacts-page";
 @import "_order-page";
 @import "_one-news-page";
+@import "_cart-page";
 
 
 @import "_other.scss";  
