--- a/app/styles/_components.scss
+++ b/app/styles/_components.scss
@@ -42,6 +42,7 @@ body {
 
 
 .img-wrap {
+	overflow: hidden;
 
 	img {
 	 width: 100%;
@@ -58,6 +59,17 @@ body {
 	color: #fff;
 	text-align: center;
 	line-height: 1.2em;
+}
+
+.title-img-block {
+	height: 150px;
+	overflow: hidden;
+	position: relative;
+
+	.img-wrap {
+		width: 100%;
+		height: 100%;
+	}
 }
 
 .title-description {
@@ -517,6 +529,64 @@ body {
 			height: 22px;
 			right: 100px;
 			bottom: 0;
+		}
+
+	}
+
+	.counter-list {
+		
+			.counter-item {
+			display: inline-block;			
+
+			&:last-child {
+				margin-right: 0;
+			}
+
+		}
+
+		.counter-wrap {
+			width: 130px;
+			border: 1px solid $border-color;
+			height: 42px;
+			text-align: center;
+			vertical-align: middle;
+			font-size: 13px;
+			margin-top: 10px;
+
+			a {
+				display: inline-block;
+				cursor: pointer;
+				width: 40px;
+				height: 100%;
+				color: #426995;
+				padding: 11px 0;
+				font-weight: 700;
+
+				&:hover {
+					text-decoration: none;
+					color: #426995;
+				}
+
+			}
+
+		}
+
+		.left-btn {
+			border-right: 1px solid $border-color;
+			float: left;
+		}
+
+		.right-btn {
+			border-left: 1px solid $border-color;
+			float: right;
+		}
+
+		.counter {
+			display: inline-block;
+			height: 100%;
+			color: #426995;
+			padding: 11px 0;
+			font-weight: 700;
 		}
 
 	}
