--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -582,6 +582,20 @@ $blue-color: #3c4f90;
 
   //END ONE-NEWS-PAGE 
 
+  //СART-PAGE
+
+  .cart-page {
+
+  	.cart-body {
+		height: auto;
+  	}
+
+  	.catalog-button {
+  		width: 150px;
+  	}
+
+  }
+
 
  }
 
