--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -907,5 +907,19 @@ $blue-color: #3c4f90;
 
   //END ONE-NEWS-PAGE 
 
+  //СART-PAGE
+
+  .cart-page {
+
+  	.cart-body {
+		height: auto;
+  	}
+
+  	.cart {
+  		border-bottom: none;
+  	}
+
+  }
+
 
 }
