--- a/app/styles/_product-page.scss
+++ b/app/styles/_product-page.scss
@@ -209,6 +209,10 @@ $blue-color: #3c4f90;
 
 		.counter-item {			
 			margin-right: 30px;
+		}
+
+		.counter-wrap {
+			margin-top: 10px;
 		}	
 	}
 	
