search psge dev

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -26,6 +26,7 @@ $icon-font-path: '../fonts/';
 @import "_order-page";
 @import "_one-news-page";
 @import "_cart-page";
+@import "_search-page";
 
 
 @import "_other.scss";  
