--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -35,6 +35,11 @@ $blue-color: #3c4f90;
 		margin-top: -270px;
 	}
 
+	.catalog-block {		
+		margin-left: 0;
+		margin-right: 0;
+	}
+
 
   //HEADER
 
@@ -674,15 +679,9 @@ $blue-color: #3c4f90;
 
 		//end right-column
 
-		//catalog
-
 		.catalog-block {
-			margin-top: 30px;
-			margin-left: 0;
-			margin-right: 0;
+			margin-top: 30px;			
 		}
-
-		//end catalog
   
 	}
 
