--- a/app/styles/_about-page.scss
+++ b/app/styles/_about-page.scss
@@ -77,12 +77,7 @@ $blue-color: #3c4f90;
 		background: #fff;	
 		padding: 3.6rem 0;
 	}
-
-	.content {
-		margin-right: -15px;
-		margin-left: -15px;
-		padding-bottom: 0;
-	}
+	
 
 	.about-list {
 		text-align: center;
@@ -183,6 +178,20 @@ $blue-color: #3c4f90;
 			width: 28px;
 		}
 
+	}
+
+	.feedback-block {
+		background: #fff;
+
+		.feedback-text-wrap {
+			border-bottom: 13px solid #fff8f8;
+    		border-top: 13px solid #fff8f8;
+			background: #fff8f8;
+		}
+
+		.scrollbar {
+			background: transparent;
+		}
 	}	
 
 }
