--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,6 +27,7 @@ $icon-font-path: '../fonts/';
 @import "_one-news-page";
 @import "_cart-page";
 @import "_search-page";
+@import "_modal";
 
 
 @import "_other.scss";  
