--- a/app/styles/_contacts-page.scss
+++ b/app/styles/_contacts-page.scss
@@ -67,7 +67,7 @@ $blue-color: #3c4f90;
 
 	.title-button {
 		margin-top: 3px;
-		width: 140px;
+		//width: 140px;
 	}
 
 	.contacts-text {
@@ -89,7 +89,7 @@ $blue-color: #3c4f90;
  }
 
 	.contact-text {
-		margin-bottom: 10px;
+		margin-top: 10px;
 		font-size: 14px;
 		font-weight: 600;
 		color: $black-color;
