--- a/app/styles/_max-540.scss
+++ b/app/styles/_max-540.scss
@@ -602,6 +602,17 @@ $blue-color: #3c4f90;
 
   }
 
+	//CREATE-PAGE
 
- }
+  .create-page {
+
+		.create-button {
+			width: 100%;
+		}
+
+	}
+
+//END CREATE-PAGE
+
+}
 
