--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -932,5 +932,43 @@ $blue-color: #3c4f90;
 
   }
 
+  //CREATE-PAGE
+
+  .create-page {
+
+	  //tabs
+
+	  .tabs {
+		display: none;
+		}
+
+		.tab_drawer_heading {
+			width: 100%;
+			height: 44px;
+			line-height: 44px;	
+			background-color: #fff;
+			border: 1px solid #8474d6;
+			text-align: center;
+			color: #8474d6;
+			display: block;
+			cursor: pointer;
+			-webkit-touch-callout: none;
+			-webkit-user-select: none;
+			-khtml-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+		}
+
+		.d_active {
+			background-color: #8474d6;		
+			color: #fff;
+		}
+
+	  //tabs-end
+  }
+
+  //END CREATE-PAGE
+
 
 }
