--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -28,6 +28,7 @@ $icon-font-path: '../fonts/';
 @import "_cart-page";
 @import "_search-page";
 @import "_modal";
+@import "_create-page";
 
 
 @import "_other.scss";  
