--- a/app/styles/_cart-popup.scss
+++ b/app/styles/_cart-popup.scss
@@ -51,7 +51,7 @@ $blue-color: #3c4f90;
 
 	.cart-body {
 		//height: 240px; /* 3 товара*/
-		height: calc(210px - 40px);
+		max-height: calc(210px - 40px);
 		overflow: auto;
 		-webkit-overflow-scrolling: touch;
 		padding: 0 15px;
