create-page modal dev

--- a/app/styles/_max-767.scss
+++ b/app/styles/_max-767.scss
@@ -990,6 +990,19 @@ $blue-color: #3c4f90;
 
   }
 
+	//modal
+
+  .create-modal {
+
+    .content-list {
+      margin-left: 0; 
+			margin-right: 0;     
+    }
+   
+  }
+
+  //end modal
+
   //END CREATE-PAGE
 
 
